--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Chat App</h1>
+    <form id="messageForm">
+        <input type="text" name="message">
+        <button>Send</button>
+    </form>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
