--- a/public/chat.html
+++ b/public/chat.html
@@ -11,14 +11,12 @@
 </head>
 <body>
 <div class="chat">
-    <div class="chat__sidebar">
-
-    </div>
+    <div id="sidebar" class="chat__sidebar"></div>
     <div class="chat__main">
         <div id="messages" class="chat__messages"></div>
         <div class="compose">
             <form id="messageForm">
-                <input type="text" name="message" placeholder="Message">
+                <input type="text" name="message" placeholder="Message" required autocomplete="off">
                 <button>Send</button>
             </form>
 
@@ -30,7 +28,7 @@
 <script id="message-template" type="text/html">
     <div class="message">
         <p>
-            <span class="message__name">User name</span>
+            <span class="message__name">{{ username }}</span>
             <span class="message__meta">{{ time }}</span>
         </p>
         <p>{{ message }}</p>
@@ -40,11 +38,21 @@
 <script id="location-template" type="text/html">
     <div class="message">
         <p>
-            <span class="message__name">User name</span>
+            <span class="message__name">{{ username }}</span>
             <span class="message__meta">{{ time }}</span>
         </p>
         <p><a href="{{ url }}" target="_blank">This is my location.</a></p>
     </div>
+</script>
+
+<script id="sidebar-template" type="text/html">
+    <h2 class="room-title">{{room}}</h2>
+    <h3 class="list-title">Users</h3>
+    <ul class="users">
+        {{#users}}
+        <li>{{username}}</li>
+        {{/users}}
+    </ul>
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
